company name alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -160,6 +160,11 @@ header.bk-header {
 .widget.companyname {
   display: block;
   margin-left:5px;
+  width:50%;
+}
+
+.widget-align-right, .align-right, div.align-right, a img.align-right, .widget-align-left, .align-left, div.align-left, a img.align-left {
+  margin-top:10px;
 }
 
 .companyname a:hover {
